- Deque behavior meow meow meow